<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thilux.notes.activity.NoteActivity">

    <RelativeLayout
        android:id="@+id/layoutNoteMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textNoteLayoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/activity_note_activity_title_create"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textNoteLayoutTitle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/activity_note_title_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editNoteContent"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@+id/editNoteTitle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/activity_note_content_hint"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:id="@+id/layoutNoteActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editNoteContent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonNoteAddUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:text="@string/activity_note_button_add" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:text="@string/activity_note_burron_cancel" />
        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
